--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="fonts/*"/>
+    <link rel="stylesheet" href="fonts/fonts.css"/>
     <link rel="stylesheet" href="styles/global.css"/>
     <link rel="stylesheet" href="styles/style.css"/>
   </head>
@@ -22,83 +22,84 @@
           <img class="header__logo-image" src="images/logo-black.svg" alt="логотип оно тебе надо">
         </a>
         <address class="header__address">
-          <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
-          </address>
-         </header>
+        </address>
+    </header>
     <main class="main">
      <section class="cover">
       <div class="overlay"></div>
       <h1 class="cover_title uppercase-text">
-        <span class="aligned-text" class="no-letter-spacing">оно</span>
-        <span class="aligned-text_center" class="no-letter-spacing">тебе</span>
-        <span class="aligned-text_right" class="no-letter-spacing">надо</span>
+        <span class="aligned-text">оно</span>
+        <span class="aligned-text aligned-text_center">тебе</span>
+        <span class="aligned-text aligned-text_right">над<span class="no-letter-spacing">о</span></span>
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">аукцион вещей, в которые никто не верил</p>
-        <button class="bet-button">сделать ставку</butto>
+        <button class="bet-button uppercase-text">сделать ставку</button>
       </div>
       </section>
       <section class="lots">
-      <h2 class="lots__heading">лоты</h2>
-      <ul class="lots__card-list">
+        <h2 class="lots__heading" class="lots__heading-text">лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item"><a href="#" class="card-link">
+            <article class="card_type_film card">
+              <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. 
+                  Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                  <div class="overlay"></div>
+            </article>
+          </a></li>
      <li class="lots__card-list-item"><a href="#" class="card-link">
-      <div class="card_type_film"><article class="card_overlay">
-        <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-        <p class="card__text">Не просто бросил, а ушёл с первой лекции. 
-          Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-      </article>
-    </div></a></li>
-     <li class="lots__card-list-item"><a href="#" class="card-link">
-      <div class="card_type_book"><article class="card_overlay">
+        <article class="card_type_book card">
         <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
         <p class="card__text">Объёмом почти в тысячу страниц. 
           Иногда без знаков препинания и с переходами на древнеанглийский. 
           В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
           И это всё накладывается на эпическую поэму Гомера.
            Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+           <div class="overlay"></div>
       </article>
     </div></a></li>
       <li class="lots__card-list-item"><a href="#" class="card-link">
-      <div class="card_type_picture"><article class="card_overlay">
+        <article class="card_type_picture card">
         <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
         <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
           Никаких полей, лесов, котиков... 
           Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+          <div class="overlay"></div>
       </article>
     </div></a></li></ul>
-<div class="lots__look-more-link" >
-  <a href="#">посмотреть больше</a>
-</div>
+<a class="lots__look-more-link" href="#">посмотреть больше</a>
 </section>
 <section class="about">
+  <div class="about__logo">
+  <img class="about__logo-image" src="images/logo-white.svg" alt="белый логотип оно тебе надо"></div>
   <div class="about__column">
-  <a class="about__logo">
-  <img class="about__logo-image" src="/ono-tebe-nado-fd/images/logo-white.svg" alt="белый логотип оно тебе надо"></a>
   <h2 class="about__title">Об аукционе</h2>
-    <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
-      Наши лоты вообще не должны были попасть ни на один аукцион. 
-      Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? 
-      Кому нужны все эти странные вещи, созданные любителями?</p>
-    <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. 
-    В пух и прах растерзанные критиками. 
-    Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
-Когда в эти вещи не верил никто, продолжали верить их создатели. 
-И сейчас эти лоты стали культовыми.></p>
+  <div class="about__text">
+    <p>Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+    <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. 
+В&nbsp;пух и&nbsp;прах растерзанные критиками. 
+Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
+Когда в&nbsp;эти вещи не верил никто, продолжали верить их&nbsp;создатели. 
+И&nbsp;сейчас эти лоты стали культовыми.</p>
+</div>
+</div>
 </div>
 </section>
     </main>
-    <footer  class="footer">
-      <div class="footer_address">
-          <a  href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
-          <a  href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-          <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
-        </div>
+    <footer class="footer">
+      <adress class="footer__address">
+          <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
+        </adress>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item_no-bullit"><a href="#glavnay" class="footer__menu-link_active">главная</a></li>
+          <li class="footer__menu-list-item footer__menu-list-item_no-bullit"><a href="#glavnay" class="footer__menu-link_active">главная</a></li>
           <li class="footer__menu-list-item"><a href="#looklog" class="footer__menu-link">посмотреть лоты</a>
           </li>
           <li class="footer__menu-list-item"><a href="#aboutayk">об аукционе</a>
