--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img class="header__logo-image" src="images/logo-black.svg" alt="логотип оно тебе надо">
         </a>
         <address class="header__address">
-          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
         </address>
@@ -41,87 +41,95 @@
       </div>
       </section>
       <section class="lots">
-        <h2 class="lots__heading" class="lots__heading-text">лоты</h2>
+        <h2 class="lots__heading lots__heading-text">лоты</h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item"><a href="#" class="card-link">
-            <article class="card_type_film card">
-              <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-                <p class="card__text">Не просто бросил, а ушёл с первой лекции. 
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card_type_film card">
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                  <p class="card__text">Не просто бросил, а ушёл с первой лекции. 
                   Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-                  <div class="overlay"></div>
-            </article>
-          </a></li>
-     <li class="lots__card-list-item"><a href="#" class="card-link">
-        <article class="card_type_book card">
-        <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
-        <p class="card__text">Объёмом почти в тысячу страниц. 
-          Иногда без знаков препинания и с переходами на древнеанглийский. 
-          В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
-          И это всё накладывается на эпическую поэму Гомера.
-           Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-           <div class="overlay"></div>
-      </article>
-    </div></a></li>
-      <li class="lots__card-list-item"><a href="#" class="card-link">
-        <article class="card_type_picture card">
-        <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-        <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
-          Никаких полей, лесов, котиков... 
-          Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-          <div class="overlay"></div>
-      </article>
-    </div></a></li></ul>
-<a class="lots__look-more-link" href="#">посмотреть больше</a>
-</section>
-<section class="about">
-  <div class="about__logo">
-  <img class="about__logo-image" src="images/logo-white.svg" alt="белый логотип оно тебе надо"></div>
-  <div class="about__column">
-  <h2 class="about__title">Об аукционе</h2>
-  <div class="about__text">
-    <p>Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-    <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. 
-В&nbsp;пух и&nbsp;прах растерзанные критиками. 
-Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
-Когда в&nbsp;эти вещи не верил никто, продолжали верить их&nbsp;создатели. 
-И&nbsp;сейчас эти лоты стали культовыми.</p>
-</div>
-</div>
-</div>
-</section>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card_type_book card">
+                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card__text">Объёмом почти в тысячу страниц. 
+                    Иногда без знаков препинания и с переходами на древнеанглийский. 
+                    В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
+                    И это всё накладывается на эпическую поэму Гомера.
+                    Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a href="#" class="card-link">
+              <article class="card_type_picture card">
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
+                  Никаких полей, лесов, котиков... 
+                  Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                <div class="overlay"></div>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__logo">
+          <img class="about__logo-image" src="images/logo-white.svg" alt="белый логотип оно тебе надо">
+        </div>
+        <div class="about__column">
+          <h2 class="about__title">Об аукционе</h2>
+          <div class="about__text">
+            <p>Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. 
+              В&nbsp;пух и&nbsp;прах растерзанные критиками. 
+              Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
+              Когда в&nbsp;эти вещи не верил никто, продолжали верить их&nbsp;создатели. 
+              И&nbsp;сейчас эти лоты стали культовыми.</p>
+          </div>
+       </div>
+      </section>
     </main>
     <footer class="footer">
       <adress class="footer__address">
-          <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br>
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
-        </adress>
+        <a href="tel:+99995555555">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
+      </adress>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item footer__menu-list-item_no-bullit"><a href="#glavnay" class="footer__menu-link_active">главная</a></li>
-          <li class="footer__menu-list-item"><a href="#looklog" class="footer__menu-link">посмотреть лоты</a>
-          </li>
-          <li class="footer__menu-list-item"><a href="#aboutayk">об аукционе</a>
-          </li>
+          <li class="footer__menu-list-item"><a href="#looklog" class="footer__menu-link">посмотреть лоты</a></li>
+          <li class="footer__menu-list-item"><a href="#aboutayk">об аукционе</a></li>
         </ul>
       </nav>
       <section>
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/yt.svg" alt="социальная сеть youtube"></a>
+              <img class="footer__social-icon" src="images/yt.svg" alt="социальная сеть youtube">
+            </a>
           </li>
-           <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/vk.svg" alt="социальная сеть в контакте">
-          </a></li>
           <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#">
-            <img class="footer__social-icon" src="images/pinterest.svg" alt="социальная сеть для поиска идей pinterest">
-          </a></li>
+            <a class="footer__social-link" href="#">
+              <img class="footer__social-icon" src="images/vk.svg" alt="социальная сеть в контакте">
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#">
+              <img class="footer__social-icon" src="images/pinterest.svg" alt="социальная сеть для поиска идей pinterest">
+            </a>
+          </li>
         </ul>
       </section>
-       </footer>
+    </footer>
   </body>
 </html>
