--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
       </section>
     </main>
     <footer class="footer">
-      <adress class="footer__address">
+      <div class="footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
-      </adress>
+      </div>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item footer__menu-list-item_no-bullit"><a href="#glavnay" class="footer__menu-link_active">главная</a></li>
