--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item_no-bullit"><a class="header__link_active" href="#glavnay">главная</a></li>
+          <li class="header__links-list-item header__links-list-item-active"><a class="header__link header__link_active" href="#glavnay">главная</a></li>
           <li class="header__links-list-item"><a class="header__link" href="#looklog">посмотреть лоты</a></li>
           <li class="header__links-list-item"><a class="header__link" href="#aboutayk">об аукционе</a></li>
         </ul>
@@ -21,7 +21,7 @@
         <a class="header__logo">
           <img class="header__logo-image" src="images/logo-black.svg" alt="логотип оно тебе надо">
         </a>
-        <address class="header__address">
+        <address class="address header__address">
           <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
@@ -37,7 +37,7 @@
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">аукцион вещей, в которые никто не верил</p>
-        <button class="bet-button uppercase-text">сделать ставку</button>
+        <button class="bet-button uppercase-text" type="button">сделать ставку</button>
       </div>
       </section>
       <section class="lots">
@@ -99,26 +99,25 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__address">
+      <div class="address footer__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265,<br>Амстердам</p>
       </div>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-list-item footer__menu-list-item_no-bullit"><a href="#glavnay" class="footer__menu-link_active">главная</a></li>
+          <li class="footer__menu-list-item footer__menu-list-item-active"><a href="#glavnay" class="footer__menu-link footer__menu-link_active">главная</a></li>
           <li class="footer__menu-list-item"><a href="#looklog" class="footer__menu-link">посмотреть лоты</a></li>
-          <li class="footer__menu-list-item"><a href="#aboutayk">об аукционе</a></li>
+          <li class="footer__menu-list-item"><a href="#aboutayk" class="footer__menu-link">об аукционе</a></li>
         </ul>
       </nav>
-      <section>
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
               <img class="footer__social-icon" src="images/yt.svg" alt="социальная сеть youtube">
             </a>
           </li>
-          <li class="footer__social-list-item">
+          <li class="footer__social-list-item ">
             <a class="footer__social-link" href="#">
               <img class="footer__social-icon" src="images/vk.svg" alt="социальная сеть в контакте">
             </a>
@@ -129,7 +128,6 @@
             </a>
           </li>
         </ul>
-      </section>
     </footer>
   </body>
 </html>
